# OpenShelf

./: .gitignore  README.md  angular.json  package-lock.json  package.json
.claude/skills/release/: skill.md
.github/workflows/: release.yml
scripts/: dev.mjs
src/: styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs
src/app/: app.scss  app.spec.ts  app.ts
src/app/edit/: edit.component.ts
src/app/edit/item-form/: item-form.component.ts
src/app/edit/preferences/: preferences.component.ts
src/app/search/: search.component.ts
src/app/shared/models/: preferences.model.ts  shelf-item.model.ts
src/app/shared/services/: items.service.ts  preferences.service.ts  update.service.ts
src/app/shared/utils/: fuzzy.ts
